# CubicGameEngine

./: CMakeLists.txt  README.md
languages/: CubicGameEngine_ru_RU.ts
resources/: resources.qrc
resources/shaders/: CG_Grid_Def.frag  CG_Grid_Def.vert  Viewport_scene_def.frag  Viewport_scene_def.vert
src/: CG_ConsoleManager.cpp  CG_ConsoleManager.h  CG_Filter.h  CG_Filter.inl  CG_IdManager.h  CG_IdManager.inl  CG_Pair.h  CG_SaveStruct.cpp  CG_SaveStruct.h  CubicGameEngine.cpp
src/graphics/: CGFrameTimer.cpp  CGFrameTimer.h  CG_Primitives.cpp  CG_Primitives.h  CG_Scene.cpp  CG_Scene.h  CG_ShaderProgram.cpp  CG_ShaderProgram.h  CG_Vertex.cpp  CG_Vertex.h  CG_Viewport.cpp  CG_Viewport.h  CG_ViewportCamera.cpp  CG_ViewportCamera.h
src/ui/: CubicGameEngineWindow.ui
src/underConsideration/: Camera.cpp  Camera.h  Figures.h  Figures.inl  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.inl
src/windows/: CG_CubicGameEngineWindow.cpp  CG_CubicGameEngineWindow.h
